--- a/css/index.css
+++ b/css/index.css
@@ -1,58 +1,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400..700&family=Space+Grotesk:wght@300..700&display=swap');
-body{
+
+body {
     margin: 0;
-    padding:0;
+    padding: 0;
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
-    background-color: #efa1c5;
 }
+
 #myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 3999; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: red; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
-  }
-  
-  #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
-  }
-.flex{
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Fixed/sticky position */
+    bottom: 20px;
+    /* Place the button at the bottom of the page */
+    right: 30px;
+    /* Place the button 30px from the right */
+    z-index: 3999;
+    /* Make sure it does not overlap */
+    border: none;
+    /* Remove borders */
+    outline: none;
+    /* Remove outline */
+    background-color: red;
+    /* Set a background color */
+    color: white;
+    /* Text color */
+    cursor: pointer;
+    /* Add a mouse pointer on hover */
+    padding: 15px;
+    /* Some padding */
+    border-radius: 10px;
+    /* Rounded corners */
+    font-size: 18px;
+    /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555;
+    /* Add a dark-grey background on hover */
+}
+
+.flex {
     display: flex;
     flex-wrap: wrap;
 }
-.visit{
+.color{
+    color: #e83e8c;
+    font-size: 45px;
+    text-align: center;
+    margin-left: 45%;
+    margin-bottom: 20%;
+}
+.color1{
+    color: #e83e8c;
+    font-size: 45px;
+    text-align: center;
+    margin-left: 44%;
+    margin-bottom: 20%;
+}
+.visit {
     display: block;
     justify-content: center;
     align-items: center;
     margin-top: 5%;
 }
-.prev-btn{
+
+.prev-btn {
     color: black;
 }
-.headings{
+
+.headings {
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
     font-size: 45px;
-   text-align: center;
-  margin-left: 40%;
-  margin-top: 200%;
-  margin-bottom: 20%;
+    text-align: center;
+    margin-left: 40%;
+    margin-top: 200%;
 }
-.visit-images-containere{
+
+.visit-images-containere {
     grid-column: auto;
     gap: 20px;
     margin-top: 50px;
 }
-.visit-img{
+
+.visit-img {
     height: 300px;
     margin: 2%;
     border-radius: 50%;
@@ -61,27 +94,33 @@ body{
     cursor: pointer;
 
 }
-.visit-img:hover{
-    border: 3px solid  #e83e8c;
+
+.visit-img:hover {
+    border: 3px solid #e83e8c;
     opacity: .8;
 }
-.Seller-container{
+
+.Seller-container {
     margin-top: 5%;
 }
-.seller-heading{
+
+.seller-heading {
     margin: 50px 38%;
     /* flex-direction: row;
     gap: 100px; */
 
     font-size: 20px;
 }
-.product-container{
+
+.product-container {
     flex-direction: column;
 }
-.products{
+
+.products {
     height: 300px;
 }
-.hover-image{
+
+.hover-image {
     background-color: #fff;
     box-shadow: 0 2px 5px black;
     padding: 10px;
@@ -90,131 +129,164 @@ body{
     cursor: pointer;
     margin: 4px;
 }
-.hover-image:hover{
+
+.hover-image:hover {
     background-color: #e83e8c;
 }
-#newArrival{
+
+#newArrival {
     color: #e83e8c;
-    cursor:grab;
+    cursor: grab;
     margin: 10px;
     font-size: 20px;
 }
-#bestSeller{
-    cursor:grab;
+
+#bestSeller {
+    cursor: grab;
     margin: 10px;
     font-size: 20px;
 }
-#topRates{
-    cursor:grab;
+
+#topRates {
+    cursor: grab;
     margin: 10px;
     font-size: 20px;
 }
-center{
-   margin: 5% 0;
+#newArrival:hover{
+    color: #e83e8c;
 }
-.flavour-container{
+#bestSeller:hover{
+    color: #e83e8c;
+}
+ #topRates:hover{
+    color: #e83e8c;
+}
+center {
+    margin: 5% 0;
+}
 
-margin-left: 50px;
-}
-.flavour-img{
-height: 300px;
-padding-top: 15px;
-cursor: pointer;
+.flavour-container {
 
+    margin-left: 50px;
 }
-.flavour-description{
-margin:10px 77px;
-font-weight: bold;
-cursor: pointer;
-}
-.flavour-price{
-color: #e83e8c;
-padding-left: 10px;
-cursor: pointer;
-}
-.effect-hover{
-width:200px;
-padding: 5px 10px;
-padding-left: 70px;
-display: flex;
-justify-content: space-around;
-visibility: hidden;
+
+.flavour-img {
+    height: 300px;
+    padding-top: 15px;
+    cursor: pointer;
 
 }
 
-.flavour-card:hover{
-.effect-hover{
-    visibility: visible;
-    transition:1.25s;
-  
+.flavour-description {
+    margin: 10px 77px;
+    font-weight: bold;
+    cursor: pointer;
 }
+.flavour-description:hover{
+    color: #e83e8c;
+}
+
+.flavour-price {
+    color: #e83e8c;
+    padding-left: 10px;
+    cursor: pointer;
+}
+
+.effect-hover {
+    width: 200px;
+    padding: 5px 10px;
+    padding-left: 70px;
+    display: flex;
+    justify-content: space-around;
+    visibility: hidden;
+
+}
+
+.flavour-card:hover {
+    .effect-hover {
+        visibility: visible;
+        transition: 1.25s;
+
+    }
 }
 
 
-.about-section-dis{
+.about-section-dis {
     /* width: 45%; */
     text-wrap: wrap;
     margin-left: 6%;
     margin-top: 10%;
     flex-wrap: wrap;
 }
-.trend-label{
+
+.trend-label {
     margin-left: 45%;
 }
-.description{
-   font-size: 15px;
-   font-family: "Space Grotesk", sans-serif;
-   font-optical-sizing: auto;
+
+.description {
+    font-size: 15px;
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
 }
-.white-bg{
+
+.white-bg {
     background-image: url(./../imgs/home/white-bg.png);
-    width:  20vh;
+    width: 20vh;
 }
-.img-size{
-    height:  500px;
+
+.img-size {
+    height: 500px;
     overflow: hidden;
-    width:  500px;
+    width: 500px;
 }
-.img-size1{
-    height:  500px;
+
+.img-size1 {
+    height: 500px;
     transition: 2s;
     width: 500px;
     cursor: pointer;
 }
-.image-size{
+
+.image-size {
     height: 600px;
     transition: 2s;
     cursor: pointer;
     overflow: hidden;
 }
-.img-size2{
-    height:  500px;
+
+.img-size2 {
+    height: 500px;
     transition: 2s;
     width: 500px;
     cursor: pointer;
-  
+
 }
-.img-size2:hover{
+
+.img-size2:hover {
     transform: scale(1.3);
     transform-origin: 50% 50%;
     opacity: .7;
 }
-.img-size1:hover{
+
+.img-size1:hover {
     transform: scale(1.3);
-  transform-origin: 50% 50%;
-  opacity: .7;
+    transform-origin: 50% 50%;
+    opacity: .7;
 }
-.margin-top{
+
+.margin-top {
     margin-top: 12%;
 }
-.margin-bottom{
+
+.margin-bottom {
     margin-bottom: 12%;
 }
-.buyNow-btn2{
+
+.buyNow-btn2 {
     border: 1px solid black;
     margin: 25px 30px;
     padding: 10px 20px;
-    background-color:#000;
+    background-color: #000;
     color: #fff;
     border-radius: 60px;
     font-weight: bold;
@@ -223,17 +295,21 @@ visibility: hidden;
     font-size: 15px;
     transition: all .3s ease-out;
 }
-.buyNow-btn2:hover{
-    background-color:transparent;
+
+.buyNow-btn2:hover {
+    background-color: transparent;
     color: #000;
 }
-.margin-left{
+
+.margin-left {
     margin-left: 3%;
 }
-.prev-btn{
+
+.prev-btn {
     background-color: white;
 }
-.product-btn{
+
+.product-btn {
     background-color: #000;
     color: #fff;
     font-size: 14px;
@@ -244,17 +320,20 @@ visibility: hidden;
     transition: .8s;
     font-weight: bold;
 }
-.product-btn:hover{
+
+.product-btn:hover {
     background-color: transparent;
     color: #000;
 }
-.menu{
+
+.menu {
     background-image: url(./../imgs/home/menu-bg1.png);
     height: 95vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
-.menu-discripton{
+
+.menu-discripton {
     text-align: center;
     position: relative;
     top: 450px;
@@ -264,25 +343,31 @@ visibility: hidden;
     line-height: 1.5em;
     letter-spacing: 1px;
 }
-.menu-card-icons{
+
+.menu-card-icons {
     margin-left: 10%;
     cursor: pointer;
     transition: .3s;
 }
-.menu-card-icons:hover{
+
+.menu-card-icons:hover {
     color: #e83e8c;
 }
-.menu-product{
+
+.menu-product {
     position: relative;
     top: 450px;
 }
-.card-img{
+
+.card-img {
     margin-left: 14%;
     transition: .4s;
 }
-.card-img:hover{
+
+.card-img:hover {
     transform: scaleY(1);
 }
+
 /* .container1 {
     position: relative;
     width: 100%;
@@ -320,67 +405,74 @@ visibility: hidden;
   .fa-user:hover {
     color: #e83e8c;
   } */
-
-  .slide{
-    /* display: none; */
-  }
-  .insta-image-div{
-    height: 275px important!;
+.insta-image-div {
+    height: 275px important !;
     width: 275px;
     overflow: hidden;
-  }
-  .insta-image{
+}
+
+.insta-image {
     transition: 5.3s;
     overflow: hidden;
-  }
-  .insta-image:hover{
+}
+
+.insta-image:hover {
     transform: scale(2.3);
-  }
+}
+
 @media screen and (max-width:1300px) {
-    .visit-img{
+    .visit-img {
         height: 230px;
     }
 
 }
+
 @media screen and (max-width:1200px) {
-    .visit-img{
+    .visit-img {
         height: 200px;
     }
 }
+
 @media screen and (max-width:1000px) {
-    .visit-img3{
+    .visit-img3 {
         display: none;
     }
 
 }
+
 @media screen and (max-width:718px) {
-    .visit-img{
-       margin: 1%;
+    .visit-img {
+        margin: 1%;
     }
 
-    
+
 }
+
 @media screen and (max-width:670px) {
-    .visit-img{
-       height:  150px;
+    .visit-img {
+        height: 150px;
     }
 
 }
+
 @media screen and (max-width:512px) {
-    .visit-img2{
-       display: none;
+    .visit-img2 {
+        display: none;
     }
-    .visit-img{
+
+    .visit-img {
         margin: 3%;
     }
 
 
 }
+
 @media screen and (max-width:364px) {
-    .visit-img1{
-       display: none;
+    .visit-img1 {
+        display: none;
     }
-    .visit-img{
+
+    .visit-img {
         margin-left: 10%;
     }
 
