--- a/css/index.css
+++ b/css/index.css
@@ -45,20 +45,28 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
-.color{
+
+.color {
     color: #e83e8c;
     font-size: 45px;
     text-align: center;
     margin-left: 45%;
     margin-bottom: 20%;
 }
-.color1{
+
+.color1 {
     color: #e83e8c;
     font-size: 45px;
     text-align: center;
     margin-left: 44%;
     margin-bottom: 20%;
 }
+.color2 {
+    color: #e83e8c;
+    font-size: 45px;
+    text-align: center;
+}
+
 .visit {
     display: block;
     justify-content: center;
@@ -152,15 +160,19 @@ body {
     margin: 10px;
     font-size: 20px;
 }
-#newArrival:hover{
+
+#newArrival:hover {
     color: #e83e8c;
 }
-#bestSeller:hover{
+
+#bestSeller:hover {
     color: #e83e8c;
 }
- #topRates:hover{
+
+#topRates:hover {
     color: #e83e8c;
 }
+
 center {
     margin: 5% 0;
 }
@@ -182,7 +194,8 @@ center {
     font-weight: bold;
     cursor: pointer;
 }
-.flavour-description:hover{
+
+.flavour-description:hover {
     color: #e83e8c;
 }
 
@@ -365,7 +378,7 @@ center {
 }
 
 .card-img:hover {
-    margin-top: -10% ;
+    margin-top: -10%;
 }
 
 /* .container1 {
@@ -405,10 +418,20 @@ center {
   .fa-user:hover {
     color: #e83e8c;
   } */
+.insta-container {
+    text-align: center;
+    padding: 5px;
+    margin-top: 10%;
+}
+.image-content{
+    margin-top: 7%;
+}
+
 .insta-img-div {
-    height: 300px ;
+    height: 300px;
     width: 300px;
     overflow: hidden;
+    position: relative;
 }
 
 .insta-image {
@@ -419,6 +442,19 @@ center {
     transform: scale(1.3);
     opacity: .3;
 }
+.middle-insta{
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+.insta-img-div:hover .middle-insta {
+    opacity: 1;
+  }
 
 @media screen and (max-width:1300px) {
     .visit-img {
